--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,8 +12,8 @@
 <body>
     <div id="main">
         <h1>Upload Your Images</h1>
-        <form action="upload" method="post">
-            <label>File:</label> <input name="images" type="file" multiple="multiple">
+        <form action="#" method="post">
+            <label>File:</label> <input name="images" type="file" multiple="multiple" accept=".png,.jpg">
             <input type="submit" id="btn" value="Upload">
         </form>
         <div id="response"></div>
